# nano-vllm-rs

./: CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  Taskfile.yml  claude-plan.md
src/: backend.rs  chat.rs  config.rs  lib.rs  main.rs  sampling_params.rs
src/engine/: block_manager.rs  kv_cache.rs  llm_engine.rs  mod.rs  model_runner.rs  scheduler.rs  sequence.rs
src/layers/: attention.rs  mod.rs  rotary_embedding.rs  sampler.rs
src/model/: qwen3.rs
src/utils/: context.rs  mod.rs  profiler.rs
tests/: cuda_bf16_regression.rs  rocm_bf16_regression.rs
