[package]
name = "nano-vllm-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2" }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.21"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["chrono"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
