[package]
name = "nano-vllm-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["cpu"]
cpu = ["burn-dispatch/ndarray", "dep:burn-ndarray"]
rocm = ["burn-dispatch/rocm", "dep:burn-rocm"]

[dependencies]
anyhow = "1"
burn = { version = "0.21.0-pre.2", default-features = false, features = ["std"] }
burn-dispatch = { version = "0.21.0-pre.2", default-features = false, features = ["std"] }
burn-ndarray = { version = "0.21.0-pre.2", default-features = false, optional = true }
burn-rocm = { version = "0.21.0-pre.2", default-features = false, optional = true }
clap = { version = "4", features = ["derive"] }
half = "2"
indicatif = "0.17"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.5"
tokenizers = "0.21"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["chrono"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
